<resources>
    <string name="app_name">MyCookingApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="tabBulgarian">Bulgarian</string>
    <string name="tabAmerican">American</string>
    <string name="tabAsian">Asian</string>
    <string name="tabVegan">Vegan</string>
    <string name="empty_recipe_tab_text">No recipes found in this category.</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="recipeimageDesc">RecipeImage</string>
    <string name="ingredientsTabText">Ingredients</string>
    <string name="stepsTabText">Steps</string>
    <string name="favoritesButtonDesc">Add to favorites</string>
    <string name="shareButtonDesc">Share the recipe with your friends</string>
    <string name="showMenuButtonDesc">Show or hide the side menu</string>
    <string name="tabImageDesc">TabImage</string>
    <string name="shareRecipeContent">"Recipe link: Missing"</string>
    <string name="goToFavoriteRecipesButton">Go to favorite recipes</string>
    <string name="addedToFavorites">Successfuly added to favorites</string>
    <string name="removedFromFavorites">Removed from farovorites</string>
    <string name="errorOccurred">Something is wrong, check logcat for errors</string>
</resources>