<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">


    <ImageView
        android:id="@+id/mainImageView"
        android:layout_width="@dimen/recipeImagesWidth"
        android:layout_height="@dimen/recipeImagesHeight"
        android:scaleType="fitXY"
        android:src="@drawable/bulgarian"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/tabImageDesc" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/mainTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/mainImageView"
        >

        <com.google.android.material.tabs.TabItem
            android:id="@+id/bulgarianTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabBulgarian" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/AmericanTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabAmerican" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/AsianTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabAsian" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/VeganTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabVegan" />
    </com.google.android.material.tabs.TabLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTabLayout">

        <ListView
            android:id="@+id/recipeList"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>