<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RecipeDetails">

    <ImageView
        android:id="@+id/detailsImageView"
        android:layout_width="@dimen/recipeImagesWidth"
        android:layout_height="@dimen/recipeImagesHeight"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bulgarian"
        android:contentDescription="@string/recipeimageDesc" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/detailsTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsImageView">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredientsTabText" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stepsTabText" />
    </com.google.android.material.tabs.TabLayout>

    <ScrollView
        android:id="@+id/SCROLLER_ID"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsTabLayout"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/detailsContentMarginStart"
            android:layout_marginTop="@dimen/detailsContentMarginTop"
            android:textSize="@dimen/detailsContentSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailsTabLayout" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="@dimen/detailsSizeMenuHeight"
        android:layout_height="@dimen/detailsSizeMenuWidth"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/sideTimerTextView"
            android:layout_width="match_parent"
            android:drawableEnd="@drawable/timer_icon"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:layout_weight="0"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/timerButton"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_weight="0"
            android:onClick="onTimerClick"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:contentDescription="@string/action_sign_in"
            android:src="@drawable/timer_icon"
            app:layout_constraintBottom_toBottomOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/favoriteButton"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_weight="0"
            android:onClick="onFavoriteClick"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:src="@drawable/bookmark"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/favoritesButtonDesc" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/shareButton"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_weight="0"
            android:onClick="onShareClick"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:src="@drawable/share"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/shareButtonDesc" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/showMenuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_weight="0"
            android:onClick="showOrHideSideMenu"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:src="@drawable/menu"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/showMenuButtonDesc" />
    </LinearLayout>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/detailsRecipeTitleMarginStart"
        android:layout_marginBottom="@dimen/detailsRecipeTitleMarginBottom"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/detailsImageView"
        app:layout_constraintStart_toStartOf="@+id/detailsImageView" />

</androidx.constraintlayout.widget.ConstraintLayout>